fix: security for endpoints uses changed